# dynalogin

./: .gitignore  .travis.yml  COPYING  Contributors.txt  Makefile.am  bootstrap  configure.ac  digest.sh  dynalogin_tester.c  git2dist.rc
contrib/phpMyID-0.9/: MyID.php
debian/: README.Debian  changelog  control  copyright  dynalogin-server.README.Debian  dynalogin-server.docs  dynalogin-server.init  dynalogin-server.install  dynalogin-server.manpages  dynalogind.conf  libdynalogin-1-0.README.Debian  libdynalogin-1-0.docs  libdynalogin-1-0.install  rules  simpleid-store-dynalogin.README.Debian  simpleid-store-dynalogin.dirs  simpleid-store-dynalogin.docs  simpleid-store-dynalogin.install  simpleid-store-dynalogin.links  watch
debian/source/: options
doc/: Architecture.txt  BUILD.txt  PAM.txt  Protocol.txt  README.txt  Roadmap.txt  TESTING.txt  dynalogin.dia  gnulib-notes.txt
dynalogind/: Makefile.am  dynalogind.1  dynalogind.c  dynalogind.conf
libdynalogin/: Makefile.am  dynalogin-datastore.h  dynalogin-internal.h  dynalogin-types.h  dynalogin.c  dynalogin.h  hotp.c  hotp.h  hotpdigest.c  hotpdigest.h  libhotp.map
libdynalogin/datasources/: Makefile.am
libdynalogin/datasources/example/: Makefile.am  example_ds.c
libdynalogin/datasources/fs/: Makefile.am  fs_ds.c
libdynalogin/datasources/odbc/: Makefile.am  README.mysql  odbc.ini-sample  odbc_ds.c  odbcinst.ini-sample  schema_mysql.sql
libdynalogin/lib/: Makefile.am  check-version.c  check-version.h  gc-gnulib.c  gc-libgcrypt.c  gc.h  getdelim.c  getline.c  hmac-sha1.c  hmac.h  md5.c  md5.h  memxor.c  memxor.h  realloc.c  sha1.c  sha1.h  stdint.in.h  stdio.in.h  stdlib.in.h  strverscmp.c  strverscmp.h  sys_stat.in.h  unistd.in.h  wchar.in.h
libdynaloginclient/: Makefile.am  dynaloginclient.c  dynaloginclient.h  test_client.c
m4/: gnulib-cache.m4  gnulib-comp.m4
pam_dynalogin/: Makefile.am  README_PAM.txt  pam_dynalogin.c
php/: dynalogin.php  test_dynalogin.php
phpMyID-dynalogin/: CHANGELOG  FAQ  LICENSE  MyID.config.php  MyID.php  README  README-dynalogin.txt  dynalogin.php  htaccess
simpleid/: README.txt  dynalogin-filesystem.store.config.php  dynalogin-filesystem.store.inc  dynalogin-filesystem.store.php  example-dynalogin.identity.dist
